// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SemiCircleChart renders a semi-circle chart 1`] = `
<div
  class="ez-viz"
  style="width: 800px; height: 600px;"
>
  <div class="ez-fragment-tooltip">
    <div class="ez-fragment-filter">
      <div class="ez-chart">
        <svg
          class="ez-svg"
          style="width: 800px; height: 600px;"
        >
          <g transform="translate(100, 100)">
            <g
              transform="translate(300,400)"
              class="ez-pie"
            >
              <path
                d="M-123.60679774997902,-380.4226065180614L0,0Z"
                fill="red"
                stroke="#FFF"
                stroke-width="0"
                data-testid="ez-arc"
                class="ez-arc"
              >
              </path>
              <path
                d="M400,0L0,0Z"
                fill="green"
                stroke="#FFF"
                stroke-width="0"
                data-testid="ez-arc"
                class="ez-arc"
              >
              </path>
            </g>
          </g>
        </svg>
      </div>
      <div class="ez-legend">
        <div
          role="button"
          class="ez-legend-key"
        >
          <div
            class="ez-legend-box"
            style="background-color: red; border: 2px solid red;"
          >
          </div>
          <span class="ez-legend-text">
            Alpha
          </span>
        </div>
        <div
          role="button"
          class="ez-legend-key ez-legend-disable"
        >
          <div
            class="ez-legend-box"
            style="background-color: rgba(255, 255, 255, 0); border: 2px solid blue;"
          >
          </div>
          <span class="ez-legend-text">
            Beta
          </span>
        </div>
        <div
          role="button"
          class="ez-legend-key"
        >
          <div
            class="ez-legend-box"
            style="background-color: green; border: 2px solid green;"
          >
          </div>
          <span class="ez-legend-text">
            Gamma
          </span>
        </div>
      </div>
    </div>
    <div
      class="ez-tooltip"
      style="left: 0px; top: 0px; opacity: 0;"
    >
    </div>
  </div>
</div>
`;

exports[`SemiCircleChart renders a semi-circle chart 2`] = `
<div
  class="ez-viz"
  style="width: 800px; height: 600px;"
>
  <div class="ez-fragment-tooltip">
    <div class="ez-fragment-filter">
      <div class="ez-chart">
        <svg
          class="ez-svg"
          style="width: 800px; height: 600px;"
        >
          <g transform="translate(100, 100)">
            <g
              transform="translate(300,400)"
              class="ez-pie"
            >
              <path
                d="M-123.60679774997902,-380.4226065180614A400,400,0,0,0,-400,-4.898587196589413e-14L0,0Z"
                fill="red"
                stroke="#FFF"
                stroke-width="0"
                data-testid="ez-arc"
                class="ez-arc"
              >
              </path>
              <path
                d="M400,0A400,400,0,0,0,-123.60679774997902,-380.4226065180614L0,0Z"
                fill="green"
                stroke="#FFF"
                stroke-width="0"
                data-testid="ez-arc"
                class="ez-arc"
              >
              </path>
            </g>
          </g>
        </svg>
      </div>
      <div class="ez-legend">
        <div
          role="button"
          class="ez-legend-key"
        >
          <div
            class="ez-legend-box"
            style="background-color: red; border: 2px solid red;"
          >
          </div>
          <span class="ez-legend-text">
            Alpha
          </span>
        </div>
        <div
          role="button"
          class="ez-legend-key ez-legend-disable"
        >
          <div
            class="ez-legend-box"
            style="background-color: rgba(255, 255, 255, 0); border: 2px solid blue;"
          >
          </div>
          <span class="ez-legend-text">
            Beta
          </span>
        </div>
        <div
          role="button"
          class="ez-legend-key"
        >
          <div
            class="ez-legend-box"
            style="background-color: green; border: 2px solid green;"
          >
          </div>
          <span class="ez-legend-text">
            Gamma
          </span>
        </div>
      </div>
    </div>
    <div
      class="ez-tooltip"
      style="left: 0px; top: 0px; opacity: 0;"
    >
    </div>
  </div>
</div>
`;
